tests/errors/string_builder_push_nonref.ptt
use std/string_builder

touch(b StringBuilder) {
  b.push_string("x")
}

spark {
  b is StringBuilder()
  touch(b)
}
